--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ menus/__pycache__/categoria.cpython-37.pyc
 menus/__pycache__/principal.cpython-37.pyc
 /home/josu3/Desktop/CrudTkinter/.vscode
 menus/__pycache__/__init__.cpython-37.pyc
+test.py
